tests/untyped_type_import/untyped_type_import.exp
Error ---------------------------------------------------------- imports.js:5:14

Importing a type from an untyped module makes it `any` and is not safe! Did you
mean to add `// @flow` to the top of `./untyped_exports.js`?
(`untyped-type-import`)

Error: imports.js:5
  5: import type {FooType} from './untyped_exports.js'; //Error
                  ^^^^^^^ Importing a type from an untyped module makes it `any` and is not safe! Did you mean to add `// @flow` to the top of `./untyped_exports.js`? (`untyped-type-import`)

Error ---------------------------------------------------------- imports.js:6:16

Importing a type from an untyped module makes it `any` and is not safe! Did you
mean to add `// @flow` to the top of `./untyped_exports.js`?
(`untyped-type-import`)

Error: imports.js:6
  6: import typeof {FooObj} from './untyped_exports.js'; //Error
                    ^^^^^^ Importing a type from an untyped module makes it `any` and is not safe! Did you mean to add `// @flow` to the top of `./untyped_exports.js`? (`untyped-type-import`)

Error --------------------------------------------------------- imports.js:10:15

Importing a type from an untyped module makes it `any` and is not safe! Did you
mean to add `// @flow` to the top of `./untyped_exports.js`?
(`untyped-type-import`)

Error: imports.js:10
 10: import typeof BarObj from './untyped_exports.js'; //Error
                   ^^^^^^ Importing a type from an untyped module makes it `any` and is not safe! Did you mean to add `// @flow` to the top of `./untyped_exports.js`? (`untyped-type-import`)

Error --------------------------------------------------------- imports.js:14:14

Importing a type from an untyped module makes it `any` and is not safe! Did you
mean to add `// @flow` to the top of `./untyped_exports.js`?
(`untyped-type-import`)

Error: imports.js:14
 14: import type {BazType} from './untyped_exports.js'; //Error
                  ^^^^^^^ Importing a type from an untyped module makes it `any` and is not safe! Did you mean to add `// @flow` to the top of `./untyped_exports.js`? (`untyped-type-import`)

Error --------------------------------------------------------- imports.js:15:16

Importing a type from an untyped module makes it `any` and is not safe! Did you
mean to add `// @flow` to the top of `./untyped_exports.js`?
(`untyped-type-import`)

Error: imports.js:15
 15: import typeof {BazObj} from './untyped_exports.js'; //Error
                    ^^^^^^ Importing a type from an untyped module makes it `any` and is not safe! Did you mean to add `// @flow` to the top of `./untyped_exports.js`? (`untyped-type-import`)

Error --------------------------------------------------------- imports.js:24:29

Cannot resolve module `./nonexistent.js`.

Error: imports.js:24
 24: import type {BeepType} from './nonexistent.js';
                                 ^^^^^^^^^^^^^^^^^^ Cannot resolve module `./nonexistent.js`.

Error --------------------------------------------------------- imports.js:25:30

Cannot resolve module `./nonexistent.js`.

Error: imports.js:25
 25: import typeof {BeepObj} from './nonexistent.js';
                                  ^^^^^^^^^^^^^^^^^^ Cannot resolve module `./nonexistent.js`.

Error --------------------------------------------------------- imports.js:27:28

Cannot resolve module `./nonexistent.js`.

Error: imports.js:27
 27: import typeof BoopObj from './nonexistent.js';
                                ^^^^^^^^^^^^^^^^^^ Cannot resolve module `./nonexistent.js`.


Found 8 errors
